--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gasparetto Juris!</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <script src="./js/index.js"></script>
 </head>
