--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./js/index.js"></script>
 </head>
 <body>
-    <header class="o-header"><h4>Página em desenvolvimento.</h4></header>
+    <header class="o-header"><h4 id="title-header">Página em desenvolvimento.</h4></header>
     <aside class="o-aside">.</aside>
     <main class="o-main">.</main>
     <footer class="o-footer">.</footer>
