--- a/index.html
+++ b/index.html
@@ -6,13 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gasparetto Juris!</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital@1&display=swap" rel="stylesheet">
     <script src="./js/index.js"></script>
 </head>
 <body>
-    <header class="o-header"><h4 id="title-header">Página em desenvolvimento.</h4></header>
-    <aside class="o-aside">.</aside>
+    <header class="o-header">
+        <div class="logo">
+            <img src="./img/logo.png">
+            <h4>Gasparetto Juris</h4>
+        </div>
+        <div class="options">
+            III
+        </div>
+    </header>
     <main class="o-main">.</main>
-    <footer class="o-footer">.</footer>
+    <footer class="o-footer">
+        <div class="left-side">© 2021 - Gasparetto Juris - Todos os direitos reservados.</div>
+        <div class="center-side">bleble</div>
+        <div class="right-side">blibli</div>
+    </footer>
+    
+    <h1 id="size-blocker">Está página ainda está em desenvolvimento e não está pronta para ser vista em dimensões tão largas. Por favor, Acesse pelo seu celular.</h5>
     
 </body>
 </html>
