--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital@1&display=swap" rel="stylesheet">
-    <script src="./js/index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
+    <script defer src="./js/index.js"></script>
 </head>
 <body>
     <header class="o-header">
@@ -18,9 +19,19 @@
             <h4>Gasparetto Juris</h4>
         </div>
         <div class="options">
-            III
+            <img id="btnDropDown" src="./img/dropdown.png">
         </div>
     </header>
+    <header-select class="header-select">
+        <div class="main">
+            <a href="teste">Contato</a>
+            <a href="#">Contato</a>
+            <a href="#">Contato</a>
+            <a href="#">Contato</a>
+            <a href="#">Contato</a>
+            <a href="#">Contato</a>
+        </div>
+    </header-select>
     <main class="o-main">.</main>
     <footer class="o-footer">
         <div class="left-side">© 2021 - Gasparetto Juris - Todos os direitos reservados.</div>
