--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
     </header>
     <header-select class="header-select">
         <div class="main">
-            <a href="teste">Contato</a>
             <a href="#">Contato</a>
-            <a href="#">Contato</a>
-            <a href="#">Contato</a>
-            <a href="#">Contato</a>
-            <a href="#">Contato</a>
+            <a href="#">Opção1</a>
+            <a href="#">Opção2</a>
+            <a href="#">Opção3</a>
+            <a href="#">Opção4</a>
         </div>
     </header-select>
     <main class="o-main">.</main>
