--- a/quemsomos.html
+++ b/quemsomos.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gasparetto Juris!</title>
-    <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <link rel="stylesheet" type="text/css" href="./css/quemsomos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital@1&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
-    <script defer src="./js/index.js"></script>
+    <script defer src="./js/quemsomos.js"></script>
 </head>
 <body>
     <header class="o-header">
@@ -24,11 +24,11 @@
     </header>
     <header-select class="header-select">
         <div class="main">
-            <a href="quemsomos.html">Quem somos</a>
+            <a href="#">Quem somos</a>
             <a href="#">Especialidades</a>
             <a href="#">Artigos</a>
-            <a href="">Contato</a>
-            <a href="https://api.whatsapp.com/send/?phone=5519994071517&text=Ol%C3%A1+gostaria+de+saber+mais+sobre+voc%C3%AA">Marque uma consulta</a>
+            <a href="#">Contato</a>
+            <a href="#">Marque uma consulta</a>
         </div>
     </header-select>
     <main class="o-main">.</main>
