--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <script defer src="./js/index.js"></script>
 </head>
 <body>
+    <div id="wpp-btn">
+        <img style="position: fixed; width: 45px; bottom: 5px; right: 5px;" src="./img/whatspng.png"></img>
+    </div>
     <header class="o-header">
         <div class="logo">
             <img src="./img/logo.png">
