--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="#">Especialidades</a>
             <a href="#">Artigos</a>
             <a href="">Contato</a>
-            <a href="https://api.whatsapp.com/send/?phone=5519994071517&text=Ol%C3%A1+gostaria+de+saber+mais+sobre+voc%C3%AA">Marque uma consulta</a>
+            <a href="https://api.whatsapp.com/send/?phone=5519994071517&text=Ol%C3%A1+gostaria+de+atendimento+jurídico">Marque uma consulta</a>
         </div>
     </header-select>
     <main class="o-main">.</main>
