--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gasparetto Juris</title>
-    <link rel="stylesheet" type="text/css" href="./css/quemsomos.css">
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital@1&display=swap" rel="stylesheet">
@@ -28,10 +28,8 @@
     </header>
     <header-select class="header-select">
         <div class="main">
-            <a href="quemsomos.html">Quem somos</a>
+            <a href="quemsomos.html">Contato</a>
             <a href="#">Especialidades</a>
-            <a href="#">Artigos</a>
-            <a href="">Contato</a>
             <a href="https://api.whatsapp.com/send/?phone=5519994071517&text=Ol%C3%A1+gostaria+de+atendimento+jurídico">Marque uma consulta</a>
         </div>
     </header-select>
@@ -102,20 +100,31 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-          
+        <div class="card">
+            <div class="card-header">
+                <h3>Areas de atuação</h3>
+            </div>
+            <div class="card-body">
+                <ul>
+                    <li>Direito da Família</li>
+                    <li>Direito Cívil</li>
+                    <li>Direito Imobiliário</li>
+                    <li>Direito Condominial</li>
+                    <li>Direito Criminal</li>
+                </ul>
+                <a style="color: white;" href="Especialidades.html">Quero saber mais..</a>
+            </div>
+        </div>
     </main>
     <footer class="o-footer">
         <div class="left-side">© 2022 - Gasparetto Juris - Todos os direitos reservados.</div>
-        <div class="center-side">bleble</div>
-        <div class="right-side">blibli</div>
     </footer>
     
     <header-select class="header-select">
         <div class="main">
-            <a href="quemsomos.html">Quem somos</a>
+            <a href="quemsomos.html">Contato</a>
             <a href="#">Especialidades</a>
             <a href="#">Artigos</a>
-            <a href="">Contato</a>
             <a href="https://api.whatsapp.com/send/?phone=5519994071517&text=Ol%C3%A1+gostaria+de+atendimento+jurídico">Marque uma consulta</a>
         </div>
     </header-select>
