--- a/Especialidades.html
+++ b/Especialidades.html
@@ -14,6 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script defer src="./js/Especialidades.js "></script>
 </head>
 <body>
@@ -30,7 +31,7 @@
         <div class="main">
             <a href="quemsomos.html">Contato</a>
             <a href="#">Especialidades</a>
-            <a href="https://api.whatsapp.com/send/?phone=5519994071517&text=Ol%C3%A1+gostaria+de+atendimento+jurídico">Marque uma consulta</a>
+            <a href="https://api.whatsapp.com/send/?phone=551933295879&text=Ol%C3%A1+gostaria+de+atendimento+jurídico">Marque uma consulta</a>
         </div>
     </header-select>
 
@@ -40,7 +41,7 @@
                 <h3>Direito Condominial</h3>
             </div>
             <div class="card-body">
-                <a>A administração de condomínio exige muito cuidado e trabalho. A convivência com vizinhos, problemas com pagamentos de despesas, falta de pagamento de moradores, falta de assistência da administradora e tantos outras situações podem comprometer o relacionamento de todos. Para lidar com todas essas questões, é preciso saber o que é direito condominial.</a>
+                <a>A administração de condomínio exige muito cuidado e trabalho. A convivência com vizinhos, problemas com pagamentos de despesas, falta de pagamento de moradores, falta de assistência da administradora e tantas outras situações podem comprometer o relacionamento de todos. Para lidar com todas essas questões, é preciso saber o que é direito condominial.</a>
                 <p style="margin-top: 10px; margin-left: 5px;"> <strong>O Que é Direito Condominial? </strong></p>
                 <a>Direito condominial é uma especialidade do Direito que trata da regulamentação da relação entre moradores, trabalhadores e frequentadores de construções imobiliárias que proporcionam a moradia de muitas pessoas.
                     O direito condominial estipula as regras do uso normal de uma propriedade e aplicar penalidades quando são desrespeitadas. Essas Leis e penalidades são vistas do Código Civil e na Legislação Condominial.
@@ -94,7 +95,7 @@
                     <li>Propositura, impugnação e acompanhamento de ações visando solucionar eventual descumprimento dos contratos acima mencionados, obtendo-se assim o seu cumprimento forçado e indanização pelos prejuízos sofridos</li>
                     <li>Resolução de problemas de responsabilidade civil contratual e extracontratual, tanto objetiva quanto subjetiva, quer em decorrência do inadimplemento voluntário das obrigações ou mora do devedor, quer em função de dolo, culpa e risco</li>
                     <li>Propositura, impugnação e acompanhamento de ações de indenização de danos patrimoniais, tais como prejuízos patrimoniais diretos e indiretos, lucros cessantes, danos emergentes, e demais</li>
-                    <li>Propositura, impugnação e acompanhamento de ações de prestação de contas, consignação em pagamento, depósito, anulação e substituição de títualos ao portador</li>
+                    <li>Propositura, impugnação e acompanhamento de ações de prestação de contas, consignação em pagamento, depósito, anulação e substituição de títulos ao portador</li>
                     <li>Consultoria para elaboração de notificações e interpelações judiciais e extrajudiciais, de forma a responsabilizar, provar, provocar provas, prevenir responsabilidades, precaver contra danos, constituir mora, solicitar cumprimento de obrigações, com a intenção de obter uma composição amigável antes de instaurado o processo judicial, entre outros</li>
                 </ul>
             </div>
@@ -138,8 +139,10 @@
     </main>
     <footer class="o-footer">
         <div class="left-side">© 2022 - Gasparetto Juris - Todos os direitos reservados.</div>
-        <div class="center-side">bleble</div>
-        <div class="right-side">blibli</div>
+        <div class="contact">
+            <a class="fa fa-instagram" href="https://www.instagram.com/karoline_gasparetto/"></a>
+            <p>+55 19 3329-5879</p>
+        </div>
     </footer>
     
     <header-select class="header-select">
@@ -148,7 +151,7 @@
             <a href="#">Especialidades</a>
             <a href="#">Artigos</a>
             <a href="">Contato</a>
-            <a href="https://api.whatsapp.com/send/?phone=5519994071517&text=Ol%C3%A1+gostaria+de+atendimento+jurídico">Marque uma consulta</a>
+            <a href="https://api.whatsapp.com/send/?phone=551933295879&text=Ol%C3%A1+gostaria+de+atendimento+jurídico">Marque uma consulta</a>
         </div>
     </header-select>
     
