--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script defer src="./js/index.js"></script>
 </head>
 <body>
@@ -30,7 +31,7 @@
         <div class="main">
             <a href="quemsomos.html">Contato</a>
             <a href="#">Especialidades</a>
-            <a href="https://api.whatsapp.com/send/?phone=5519994071517&text=Ol%C3%A1+gostaria+de+atendimento+jurídico">Marque uma consulta</a>
+            <a href="https://api.whatsapp.com/send/?phone=551933295879&text=Ol%C3%A1+gostaria+de+atendimento+jurídico">Marque uma consulta</a>
         </div>
     </header-select>
 
@@ -77,14 +78,14 @@
                 <div class="carousel-item">
                     <img class="d-block w-100 darkened" src="./img/adocao_new.png" style="height: 249px;" alt="Second slide">
                     <div class="carousel-caption d-md-block">
-                        <h5>Divórcio Consensual e Litigioso</h5>
+                        <h5>Adoção e multiparentalidade</h5>
                     </div>
                 </div>
 
                 <div class="carousel-item">
                     <img class="d-block w-100 darkened" src="./img/direito_imobiliario_e_condominial.jpg" style="height: 249px;" alt="Second slide">
                     <div class="carousel-caption d-md-block">
-                        <h5>Divórcio Consensual e Litigioso</h5>
+                        <h5>Divórcio Imobiliário e condominial</h5>
                     </div>
                 </div>
 
@@ -107,10 +108,9 @@
             <div class="card-body">
                 <ul>
                     <li>Direito da Família</li>
-                    <li>Direito Cívil</li>
+                    <li>Direito Civil</li>
                     <li>Direito Imobiliário</li>
                     <li>Direito Condominial</li>
-                    <li>Direito Criminal</li>
                 </ul>
                 <a style="color: white;" href="Especialidades.html">Quero saber mais..</a>
             </div>
@@ -118,6 +118,10 @@
     </main>
     <footer class="o-footer">
         <div class="left-side">© 2022 - Gasparetto Juris - Todos os direitos reservados.</div>
+        <div class="contact">
+            <a class="fa fa-instagram" href="https://www.instagram.com/karoline_gasparetto/"></a>
+            <p>+55 19 3329-5879</p>
+        </div>
     </footer>
     
     <header-select class="header-select">
@@ -125,7 +129,7 @@
             <a href="quemsomos.html">Contato</a>
             <a href="#">Especialidades</a>
             <a href="#">Artigos</a>
-            <a href="https://api.whatsapp.com/send/?phone=5519994071517&text=Ol%C3%A1+gostaria+de+atendimento+jurídico">Marque uma consulta</a>
+            <a href="https://api.whatsapp.com/send/?phone=551933295879&text=Ol%C3%A1+gostaria+de+atendimento+jurídico">Marque uma consulta</a>
         </div>
     </header-select>
     
