--- a/Especialidades.html
+++ b/Especialidades.html
@@ -50,7 +50,6 @@
                     <ul>
                     <li>Orientação Preventiva do Síndico, Conselho de Administração e Funcionários;</li>
                     <li>Notificações e Respostas;</li>
-                    <li>Notificações e Respostas;</li>
                     <li>Elaboração, Análise e Revisão de Contratos;</li>
                     <li>Acompanhamento de Reuniões;</li>
                     <li>Assembleias Gerais Ordinárias e Extraordinárias;</li>
@@ -62,14 +61,14 @@
                     <li>Uso da Propriedade Pelos Condôminos;</li>
                     <li>Ajuizamento e Defesa de Ações Judiciais Relativas a Inadimplemento, Arrependimento, Rescisão Contratual e Restituição de Quantias Pagas;</li>
                     <li>Questões Relativas ao Registro de Imóveis;</li>
-                    <li>Despejo por Falta de Pagamento de Áreas Pertencentes ao Condomínio, Execuções de Aluguéis, Ações Revisionais, Renovatórias e de Consignação de Pagamento.</li>
+                    <li>Execuções de Aluguéis, Ações Revisionais, Renovatórias e de Consignação de Pagamento.</li>
                 </ul>
             </div>
         </div>
 
         <div class="card">
             <div class="card-header">
-                <h3>Direito da família</h3>
+                <h3>Direito de família</h3>
             </div>
             <div class="card-body">
                 <ul>
@@ -82,6 +81,8 @@
                     <li>Regulamentação de Visitas</li>
                     <li>Pedido de Guarda</li>
                     <li>Reconhecimento e Dissolução de União Estável</li>
+                    <li>Reconhecimento de vínculos socioafetivos</li>
+                    <li>Adoção</li>
                 </ul>
             </div>
         </div>
@@ -115,7 +116,7 @@
                     <li>Consultoria de negócios imobiliários e elaboração de contratos de compra e venda, permuta, ação em pagamento, constituição de hipotecas, locações residenciais, comerciais, para temporada, comodato e demais;</li>
                     <li>Consultoria, elaboração e revisão de escrituras e contratos relativos à compra, venda e locação de imóveis;</li>
                     <li>Atuação junto aos Serviços Notariais de Registros e Imóveis e demais órgãos públicos, para o fim de regularizar transações imobiliárias e obter, retificar ou cancelar registros e averbações;</li>
-                </ul>
+                </ul>1
             </div>
         </div>
         <div class="card">
