--- a/Especialidades.html
+++ b/Especialidades.html
@@ -116,7 +116,7 @@
                     <li>Consultoria de negócios imobiliários e elaboração de contratos de compra e venda, permuta, ação em pagamento, constituição de hipotecas, locações residenciais, comerciais, para temporada, comodato e demais;</li>
                     <li>Consultoria, elaboração e revisão de escrituras e contratos relativos à compra, venda e locação de imóveis;</li>
                     <li>Atuação junto aos Serviços Notariais de Registros e Imóveis e demais órgãos públicos, para o fim de regularizar transações imobiliárias e obter, retificar ou cancelar registros e averbações;</li>
-                </ul>1
+                </ul>
             </div>
         </div>
         <div class="card">
@@ -158,6 +158,12 @@
     
     <div id="wpp-btn">
         <img src="./img/whatspng.png"></img>
+    </div>
+    <div id="insta-btn">
+        <img src="./img/instapng.png"></img>
+    </div>
+    <div id="maps-btn">
+        <img src="./img/MapsIcon.png"></img>
     </div>
 </body>
 </html>
