--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="carousel-item">
                     <img class="d-block w-100 darkened" src="./img/direito_imobiliario_e_condominial.jpg" style="height: 249px;" alt="Second slide">
                     <div class="carousel-caption d-md-block">
-                        <h5>Divórcio Imobiliário e condominial</h5>
+                        <h5>Direito Imobiliário e condominial</h5>
                     </div>
                 </div>
 
@@ -137,6 +137,12 @@
     
     <div id="wpp-btn">
         <img src="./img/whatspng.png"></img>
+    </div>
+    <div id="insta-btn">
+        <img src="./img/instapng.png"></img>
+    </div>
+    <div id="maps-btn">
+        <img src="./img/MapsIcon.png"></img>
     </div>
 </body>
 </html>
