--- a/quemsomos.html
+++ b/quemsomos.html
@@ -40,10 +40,13 @@
         <div class = "perfil-box">
             <img class = "rounded-perfil" src="./img/perfil.jpeg"/>
             <h4>Dra. Karoline Gasparetto</h4>
-            <p style="color: black;">(OAB 297.291/SP)</p>
-            <p>Pós-graduada pela Escola Paulista de Direito (EPD), ainda conta com cursos complementares de Direito Imobiliário pela EBRADI, e UNIVERSO CONDOMINIAL,<br> assim como diversas especializações, inclusive está se formando em Constelações Sistêmicas, com o intuito de oferecer não apenas soluções jurídicas, mas também terapêuticas.</p>
+            <p style="color: black;">OAB 297.291/SP</p>
+            <p>Pós-graduada pela Escola Paulista de Direito (EPD), ainda conta com cursos complementares de Direito Imobiliário pela EBRADI e UNIVERSO CONDOMINIAL,<br> assim como diversas especializações, inclusive está se formando em Constelações Sistêmicas, com o intuito de oferecer não apenas soluções jurídicas, mas também terapêuticas.</p>
         </div>
-        <iframe style="padding: 5px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3670.0432307987144!2d-47.22593658450234!3d-23.09551325044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8b34df2c56963%3A0xd2e5636ebe722fca!2sR.%20das%20Orqu%C3%ADdeas%2C%20777%20-%20808%20-%20Vila%20Bergamo%2C%20Indaiatuba%20-%20SP%2C%2013345-040!5e0!3m2!1spt-BR!2sbr!4v1643839027689!5m2!1spt-BR!2sbr" width="100%" height="400px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <!-- <iframe style="padding: 5px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3670.0432307987144!2d-47.22593658450234!3d-23.09551325044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8b34df2c56963%3A0xd2e5636ebe722fca!2sR.%20das%20Orqu%C3%ADdeas%2C%20777%20-%20808%20-%20Vila%20Bergamo%2C%20Indaiatuba%20-%20SP%2C%2013345-040!5e0!3m2!1spt-BR!2sbr!4v1643839027689!5m2!1spt-BR!2sbr" width="100%" height="400px" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
+        <div class="torreBusiness">
+            <img style="margin: auto;" src="./img/torreBusinessCard.jpg"/>
+        </div>
     </main>
     <footer class="o-footer">
         <div class="left-side">© 2022 - Gasparetto Juris - Todos os direitos reservados.</div>
@@ -65,6 +68,12 @@
     
     <div id="wpp-btn">
         <img src="./img/whatspng.png"></img>
+    </div>
+    <div id="insta-btn">
+        <img src="./img/instapng.png"></img>
+    </div>
+    <div id="maps-btn">
+        <img src="./img/MapsIcon.png"></img>
     </div>
 </body>
 </html>
